change node_env to prod

--- a/frontend/manifest.yml
+++ b/frontend/manifest.yml
@@ -5,4 +5,5 @@ applications:
   buildpack: https://github.com/pianohacker/create-react-app-buildpack.git
   env:
     OPTIMIZE_MEMORY: true
+    NODE_ENV: production
     REACT_APP_API_URL: https://pong-backend.cfapps.io
