add tag for staticip

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -63,6 +63,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: pong-ingress
+  annotations:
+        kubernetes.io/ingress.global-static-ip-name: pong-ip
 spec:
   tls:
   - secretName: tls-secret
