fix build for backend

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,7 +2,7 @@ test: queue/queue.go queue/queue_test.go main.go
 	go test ./...
 
 build: test
-	go build
+	GOOS=linux go build
 
 pack: build
 	docker build -t benjamintf1/queue-backend:latest .
