working on kubernetes deployment, and removed proxy

--- a/frontend/manifest.yml
+++ b/frontend/manifest.yml
@@ -2,8 +2,9 @@
 applications:
 - name: pong-queue
   memory: 256M
+  routes:
+  - route: https://pong-queue-staging-test.cfapps.io/
   buildpack: https://github.com/pianohacker/create-react-app-buildpack.git
   env:
     OPTIMIZE_MEMORY: true
     NODE_ENV: production
-    REACT_APP_API_URL: https://pong-backend.cfapps.io
