--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -1,22 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: pong-queue
+    name: pong-backend
     labels:
-      app: pong
+      app: pong-backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pong
+      app: pong-backend
   template:
     metadata:
       labels:
-        app: pong
+        app: pong-backend
     spec:
       containers:
       - name: queue-backend
         image: benjamintf1/queue-backend:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         env:
@@ -24,8 +25,27 @@ spec:
           value: "2"
         - name: PORT
           value: "8080"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: pong-frontend
+    labels:
+      app: pong-frontend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: pong-frontend
+  template:
+    metadata:
+      labels:
+        app: pong-frontend
+    spec:
+      containers:
       - name: queue-frontend
         image: benjamintf1/queue-frontend:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
@@ -33,28 +53,36 @@ spec:
           value: "true"
         - name: REACT_APP_HIGHLIGHT_TIME_STARTED_AFTER
           value: "20"
-        - name: REACT_APP_API_URL
-          value: " "
-        - name: DANGEROUSLY_DISABLE_HOST_CHECK
-          value: "true"
-
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: pong
+  name: pong-backend
   annotations:
     cloud.google.com/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
     service.alpha.kubernetes.io/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
 spec:
     type: NodePort
     selector:
-      app: pong
+      app: pong-backend
     ports:
       - name: backend
         protocol: TCP
-        port: 8081
+        port: 8080
         targetPort: 8080
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: pong-frontend
+  annotations:
+    cloud.google.com/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
+    service.alpha.kubernetes.io/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
+spec:
+    type: NodePort
+    selector:
+      app: pong-frontend
+    ports:
       - name: frontend
         protocol: TCP
         port: 8080
@@ -69,6 +97,22 @@ metadata:
 spec:
   tls:
   - secretName: tls-secret
-  backend:
-    serviceName: pong
-    servicePort: 8080
+  rules:
+  - http:
+      paths:
+      - path: /*
+        backend:
+          serviceName: pong-frontend
+          servicePort: 8080
+      - path: /list
+        backend:
+          serviceName: pong-backend
+          servicePort: 8080
+      - path: /add
+        backend:
+          serviceName: pong-backend
+          servicePort: 8080
+      - path: /remove
+        backend:
+          serviceName: pong-backend
+          servicePort: 8080
