--- a/backend/manifest.yml
+++ b/backend/manifest.yml
@@ -4,6 +4,8 @@ applications:
   memory: 64M
   buildpack: go_buildpack
   command: backend
+  routes:
+  - route: https://pong-queue.cfapps.io/backend
   env:
     GOPACKAGENAME: github.com/benjamintf1/queue-app/backend
     RESOURCE_COUNT: 2
