--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: pong-backend
     spec:
+      serviceAccountName: queue-app
       containers:
       - name: queue-backend
         image: benjamintf1/queue-backend:latest
