--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: pong-frontend
     spec:
+      serviceAccountName: queue-app
       containers:
       - name: queue-frontend
         image: benjamintf1/queue-frontend:latest
